It is now possible to undo after redo!

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -193,7 +193,7 @@
                         </button>
                     </div>-->
                     <div class="fillP100">
-                        <button id="NavBarUndoUnit" onclick="ereaseUnit()" class="editButtonStyling">
+                        <button id="NavBarUndoUnit" onclick="undoLatestMove()" class="editButtonStyling">
                             <img title="Undo latest unit" src="PNGs/ForExplorer/Undo.png" alt="Undo">
                         </button>
                         <button id="NavBarUndoPaintStroke" onclick="erease()" class="editButtonStyling hiddenButton">
